# giflab

./: .gitignore  BUG_FIXES_REPORT.md  BUG_FIXES_SUMMARY.md  CACHE_CONFIGURATION.md  CLAUDE.md  COLOR_REDUCTION_ANALYSIS.md  CURSOR_THREAD_INSTRUCTIONS.md  ENGINE_COMPARISON.md  GIFSICLE_FRAME_REDUCTION_ANALYSIS.md  Makefile  PERFORMANCE_MONITORING_SUMMARY.md  POSITIONAL_SAMPLING_APPROACH.md  PROJECT_SCOPE.md  QUALITY_METRICS_APPROACH.md  QUALITY_METRICS_EXPANSION_PLAN.md  README.md  S10_NOTEBOOK_IMPLEMENTATION_PLAN.md  SCOPE.md  TAGGING_APPROACH.md  TIMING_FIXES_ANALYSIS.md  code_review_analysis.md  debug_pipeline_failures.py  monitor_elimination.py  monitor_elimination_enhanced.py  pyproject.toml  pytest.ini  setup_check.ps1  setup_check.sh
.github/workflows/: ci.yml  docker-external-tools.yml  performance-regression.yml  test-matrix.yml  test-performance-monitoring.yml
data/raw/: .gitkeep
docs/: WINDOWS_DEVELOPMENT.md  ci-setup.md  cli_recipes.md  configuration-guide.md  engine_rollout_plan.md  monitoring-runbook.md  performance-regression-runbook.md  test-suite-phase5-report.md  testing-fast-suite-checklist.md
docs/analysis/: GIF_Compression_Dithering_Analysis_Report.md  GIF_Compression_Quick_Reference.md  compression-research.md  gifski_failure_modes.md  implementation-lessons.md  test-infrastructure-transformation-summary.md  test_analysis_user_examples.md
docs/completed-features/: code-review-critical-issues.md  memory-pressure-monitoring.md  performance-memory-optimization.md  pipeline-consolidation.md  test-suite-fixes.md  validation-performance-optimization.md
docs/engines/: animately.md  ffmpeg.md  gifsicle.md  gifski.md  imagemagick.md
docs/guides/: adding-new-tools.md  beginner.md  cli-dependency-troubleshooting.md  directory-source-detection.md  elimination-results-tracking.md  experimental-testing.md  migration-guide.md  migration-semantic-parameters.md  performance-tuning-guide.md  sampling-strategies.md  setup.md  test-performance-optimization.md  testing-best-practices.md  testing-strategy.md  validation-deployment.md  validation-troubleshooting.md  wrapper-validation-integration.md
docs/improvements/: refactor_todo.md
docs/migration/: breaking-changes-summary.md  dependency-migration.md  production-deployment-checklist.md  upgrade-guide-phase-1-4.md
docs/planned-features/: README.md  additional-validation.md  ai-vision-validation-system.md  architectural-improvements.md  code-review-critical-issues.md  enhanced-comparison-web-ui-validation.md  modular-experiment-presets.md  mypy-typing-improvements.md  performance-memory-optimization.md  pipeline-consolidation.md  technical-debt-cleanup.md  validation-performance-optimization.md
docs/quickstart/: targeted-presets-quickstart.md
docs/refactoring/: frame-generation-cleanup-plan.md  improvements-implemented.md  post-cleanup-test-failures-analysis.md  refactor_todo.md  test-infrastructure-gap-analysis.md
docs/reference/: cli-reference.md  configuration-reference.md  preset-types-reference.md  validation-config-reference.md
docs/technical/: architecture-overview.md  cli-development-guide.md  conditional-import-architecture.md  content-classification.md  eda-framework.md  efficiency-calculation.md  integration-patterns.md  memory-monitoring-architecture.md  metrics-system.md  ml-best-practices.md  ml-strategy.md  monitoring-setup.md  multi-engine-architecture.md  next-tools-priority.md  performance-tuning.md  phase-1-4-integration-guide.md  phase-4-3-performance-benchmarking.md  phase-7-performance-monitoring.md  preset-extension-guidelines.md  testing-strategy.md  validation-performance-guide.md  validation-quality-integration.md
docs/testing/: performance-test-guide.md  smart-pipeline-sampling-strategy.md  validation-testing-patterns.md
docs/troubleshooting/: pipeline-elimination-issues-analysis.md  pipeline-failure-analysis.md  pipeline-failure-checklist.md  targeted-presets-troubleshooting.md
docs/user-guides/: targeted-experiment-presets.md
examples/: source_tracking_usage.py
notebooks/: 01_explore_dataset.ipynb  02_build_seed_json.ipynb
optimization_results/: optimization_validation_1757592675.json  optimization_validation_1757592833.json  optimization_validation_1757592955.json
results/: MIGRATION_SUMMARY.md  README.md  comparison.html
scripts/: README.md  analyze_performance_trends.py  benchmark_lazy_imports.py  generate_performance_report.py  monitor_test_performance.py  profile_imports.py  test-performance-config.json  validate_config.py
scripts/analysis/: README.md  analyze_enhanced_metrics.py  dataset_breakdown.py  efficiency_insights.py  frame_reduction_deep_dive.py  frame_reduction_insights.py  key_findings.py  process_existing_results.py  test_enhanced_metrics.py
scripts/experimental/: README.md  monitor_config.py  monitor_elimination.py  monitor_elimination_enhanced.py  simple_monitor.py
src/giflab/: __init__.py  __main__.py  io.py  (+49 more)
test-workspace/: README.md
tests/: __init__.py  conftest.py  test_additional_metrics.py  test_analysis_tools.py  test_animately_advanced_lossy.py  test_animately_advanced_lossy_fast.py  test_cache_effectiveness.py  test_caching_architecture.py  test_cleanup_utilities.py  test_cli_commands.py  test_cli_view_failures.py  test_color_keep.py  test_color_reduction_alignment.py  test_combiner_collapsing.py  test_config.py  test_data_prep.py  test_deep_perceptual_metrics.py  test_disposal_methods.py  test_dynamic_pipeline.py  test_eda.py  test_engine_equivalence.py  test_engine_integration.py  test_engine_integration_extended.py  test_engine_integration_fast.py  test_engine_smoke.py  test_engine_specific_validation.py  test_enhanced_metrics.py  test_experiment.py  test_experimental.py  test_external_engines.py  test_frame_keep.py  test_frame_sampling.py  test_gifski_padding_quality.py  test_gpu_fallbacks.py  test_gradient_color_artifacts.py  test_gradient_color_artifacts_e2e.py  test_gradient_color_artifacts_extended.py  test_gradient_color_config.py  test_gradient_color_fixtures_validation.py  test_gradient_color_metrics_integration.py  (+34 more)
(+142 files in other folders)
